# FFmpegStreamer

./: README.md
app/: build.gradle
app/src/androidTest/java/cn/mike/ffmpegstreamer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c  logutil.c  logutil.h  native-lib.c  native-lib.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/cn/mike/ffmpegstreamer/: FFmpegUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/mike/ffmpegstreamer/: ExampleUnitTest.java
